# vtable-hack

./: README.md
client/: CMakeLists.txt  main.cpp
dynamic_client/: CMakeLists.txt  main.cpp
shared_lib/: CMakeLists.txt  lib.cpp  lib.h
